# CompGraph

./: README.md  Жадько.М.С_ДА-22_КГ_Лаб#1.docx  Жадько.М.С_ДА-22_КГ_Лаб#2.docx  Жадько.М.С_ДА-22_КГ_Лаб#3.docx
Lab#1/: CMakeLists.txt  main.cpp
Lab#2/: CMakeLists.txt  main.cpp
Lab_3/: CMakeLists.txt  Camera.cpp  Camera.h  Loader.cpp  Loader.h  Planet.cpp  Planet.h  Skybox.cpp  Skybox.h  Variables.cpp  Variables.h  main.cpp
Lab_3/include/glad/: glad.h
Lab_3/shaders/planet/: planet.frag
Lab_3/shaders/skybox/: skybox.frag
Lab_3/src/: glad.c
